fix welcome mask gap

--- a/src/newComponents/Settings/WebComeBack/index.scss
+++ b/src/newComponents/Settings/WebComeBack/index.scss
@@ -62,4 +62,7 @@
       }
     }
   }
+  .confirmBtn{
+    margin-top: var(--spacing-8);
+  }
 }
